--- a/index.html
+++ b/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Custom Site</title>
+    <title>sry i'm afk</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 style="text-indent: 100px;">-- brb --</h1>
     </header>
     <main>
-        <p>I built this from scratch using HTML!</p>
+        <h1>pls relax and wait a little bit</h1>
+        <h2>relax and wait a little bit</h2>
+        <h3>and wait a little bit</h3>
+        <h4>wait a little bit</h4>
+        <h5>a little bit</h5>
+        <h6>little bit</h6>
+
+        <p style="font-size:100px; text-align: left;">&#128534;</p>
+        <h3 style="text-align: right;">but i will be back soon</h3>
+        <h3 style="text-align: right;">...at least i think so</h3>
+        <br><br><br>
+
+
+        <h2 style="text-align: center;"><i>actually</i></h2>
+        <h5 style="text-align: left; text-indent: 400px;">this might take a while.</h5>
+
+        <br><br>
+        <h3>I'm sorry <br> I didn't expect this...<br>
+            <span style="margin-left: 40px;">but</span>
+        </h3>
+        <h3 style="margin-left: 40px;">since you are here</h3>
+
+
+        <button onclick="alert('do not click this')">
+            <h3 style="text-decoration: underline;"><mark>please click this</mark> </h3>
+        </button>
+
+        <br><br>
+        <img src="images/loading.gif"><br><img src="images/loading.gif">
+
+        <h1>oh</h1>
+        <h2><span style="float: left;">nvm.....</span><span style="float: right;">.....what about</span></h2>
+
+        <br><br>
+        <h1 style="text-align: center; text-decoration: underline;"><a href=<mark> >This< </mark>
+        </h1>
+
+
+
+
+
+
     </main>
 </body>
+
 </html>
