--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
         <h2><span style="float: left;">nvm.....</span><span style="float: right;">.....what about</span></h2>
 
         <br><br>
-        <h1 style="text-align: center; text-decoration: underline;"><a href=<mark> >This< </mark>
+        <h1 style="text-align: center; text-decoration: underline;"><a href="worked.html"><mark> >This< </mark></a>
         </h1>
-
-
-
 
 
 
